# LinuxApplicationDevelopment2021

./: README.md
02_TerminalProject/: Makefile  Show.c
03_Multifile/: Makefile  fun.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  script_01  script_02
06_TracingFencing/: Makefile  move.c  remove.c  tests
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test.sh
08_Regexps/: Makefile.am  configure.ac  esub.c  test.sh
09_Testing/: Makefile.am  configure.ac
09_Testing/src/: Makefile.am  libprog.c  prog.c  prog.h
09_Testing/tests/: Makefile.am  test1.ts  test2.ts  test3.ts  test4.ts
10_I18n/: Makefile.am  configure.ac  prog.c
10_I18n/po/: Makefile.am  ru.po
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: Makefile.am  ru.po
11_Documenting/src/: Doc.md  Makefile.am  prog.c
12_PatchInstall/: Makefile.am  configure.ac
12_PatchInstall/po/: Makefile.am  ru.po
12_PatchInstall/src/: Makefile.am  prog.c
